--- a/crm-challenge-ts/backend/package.json
+++ b/crm-challenge-ts/backend/package.json
@@ -8,10 +8,11 @@
     "build": "tsc -p tsconfig.json",
     "dev": "ts-node-dev --respawn src/server.ts",
     "start": "node --es-module-specifier-resolution=node build/server.js",
+    "db:migrate": "npm run build && node --es-module-specifier-resolution=node build/db/migration.js",
     "lint": "eslint . --ext .ts"
   },
   "engines": {
-    "node": "=15.13"
+    "node": ">15.13"
   },
   "author": "",
   "license": "ISC",
@@ -30,7 +31,8 @@
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -46,8 +48,9 @@
     "http": "0.0.1-security",
     "http-errors": "^1.8.1",
     "make-promises-safe": "^5.1.0",
-    "pg": "^8.7.1",
-    "pg-format": "^1.0.4"
+    "pg": "^8.8.0",
+    "pg-format": "^1.0.4",
+    "postgrator": "^7.1.0"
   },
   "prettier": {
     "arrowParens": "always",
