--- a/crm-challenge-ts/frontend/package.json
+++ b/crm-challenge-ts/frontend/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^29.0.1",
+    "@types/node": "^18.7.17",
+    "@types/react": "^18.0.19",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.24.0",
     "env-schema": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "typescript": "^4.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
