--- a/crm-challenge-ts/frontend/package.json
+++ b/crm-challenge-ts/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.5",
+    "react-query": "^3.39.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,7 +14,6 @@
     "@types/node": "^18.7.17",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
-    "axios": "^0.24.0",
     "env-schema": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +24,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
