--- a/crm-challenge-ts/frontend/package.json
+++ b/crm-challenge-ts/frontend/package.json
@@ -6,7 +6,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.5",
-    "react-query": "^3.39.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,13 +14,16 @@
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
     "env-schema": "^3.5.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "typescript": "^4.8.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "react-scripts start",
