Moving migration to the separate project

--- a/crm-challenge-ts/backend/package.json
+++ b/crm-challenge-ts/backend/package.json
@@ -8,7 +8,6 @@
     "build": "tsc -p tsconfig.json",
     "dev": "ts-node-dev --respawn src/server.ts",
     "start": "node --es-module-specifier-resolution=node build/server.js",
-    "db:migrate": "npm run build && node --es-module-specifier-resolution=node build/db/migration.js",
     "lint": "eslint . --ext .ts"
   },
   "engines": {
@@ -49,8 +48,7 @@
     "http-errors": "^1.8.1",
     "make-promises-safe": "^5.1.0",
     "pg": "^8.8.0",
-    "pg-format": "^1.0.4",
-    "postgrator": "^7.1.0"
+    "pg-format": "^1.0.4"
   },
   "prettier": {
     "arrowParens": "always",
