--- a/crm-challenge-ts/frontend/package.json
+++ b/crm-challenge-ts/frontend/package.json
@@ -6,13 +6,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.5",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^29.0.1",
-    "@types/node": "^18.7.17",
-    "@types/react": "^18.0.19",
-    "@types/react-dom": "^18.0.6",
     "env-schema": "^3.5.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
@@ -22,6 +15,7 @@
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "typescript": "^4.8.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
@@ -48,5 +42,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^29.0.1",
+    "@types/node": "^18.7.17",
+    "@types/react": "^18.0.19",
+    "@types/react-dom": "^18.0.6"
   }
 }
