--- a/crm-challenge-ts/backend/package.json
+++ b/crm-challenge-ts/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -p tsconfig.json",
     "dev": "ts-node-dev --respawn src/server.ts",
     "start": "node --es-module-specifier-resolution=node build/server.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix --ext .ts"
   },
   "engines": {
     "node": ">15.13"
@@ -26,15 +27,14 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.2",
-    "nodemon": "^2.0.15"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
-    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "env-schema": "^3.5.0",
     "fastify": "^3.24.1",
