--- a/crm-challenge-ts/frontend/package.json
+++ b/crm-challenge-ts/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
+    "@testing-library/dom": "^8.18.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
