--- a/crm-challenge-ts/docker-compose.yml
+++ b/crm-challenge-ts/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  postgres:
+  database:
     image: postgres
     ports:
       - '5432:5432'
@@ -13,21 +13,24 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
   backend:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: backend.Dockerfile
     ports:
       - '3001:3001'
-    command: npm run dev
     environment:
       - HOST=0.0.0.0
       - PORT=3001
     depends_on:
-      - postgres
+      - database
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: frontend.Dockerfile
     ports:
       - '3000:3000'
     environment:
       - HOST=0.0.0.0
       - PORT=3000
     depends_on:
-      - postgres
+      - database
